--- a/laboratorio.html
+++ b/laboratorio.html
@@ -7,9 +7,37 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="" alt="">
+
+
+
+
+<div class="flex-container"> 
+
+    <div class="item"><img src="assets/icon-menu-burguer.svg" alt="assets/icon-menu-burguer.svg"></div>
+    <div class="item">MODA MUJER</div>
+    <div class="item">MODA HOMBRE</div>
+    <div class="item">NUEVA COLECCION</div>
+    <div class="item">COLECCIONESA ESPECIALES</div>
+    <div class="item"><img src="assets/icon-user.svg" alt="area usuario"></div>
+    <div class="item"><img src="assets/icon-heart.svg" alt="me gusta"></div>
+    <div class="item"><img src="assets/icon-shopping-cart.svg" alt="carrito"></div>
+
+    </div>
+
+
+   
 <h1>Nuevas colecciones</h1>
     
+<div class="grid-container"></div>
+
+<div class="grid-item"><img src="assets/image-3.jpg" alt="prenda1"></div>
+<div class="grid-item"><img src="assets/image-6.jpg" alt="prenda2"></div>
+<div class="grid-item"><img src="assets/image-4.jpg" alt="prenda3"></div>
+<div class="grid-item"><img src="assets/image-5.jpg" alt="prenda4"></div>
+<div class="grid-item"><img src="assets/image-1.jpg" alt="prenda5"></div>
+<div class="grid-item"><img src="assets/image-2.jpg" alt="prenda6"></div>
     
 </body>
+
+
 </html>
